# code-predictor

./: .gitignore  LP.py  README.md  example.ipynb  model.py  pipeline.py  pyproject.toml  train.py
mlflow_config/: train_config.yaml
