[project]
name = "code-predictor"
version = "0.1.0"
description = "Inference and training pipeline for function code prediction."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "evaluate>=0.4.0",
    "mlflow>=2.17.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.5.0",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "tqdm>=4.66.0",
    "transformers>=4.46.0",
]

[tool.uv]
package = false
